test/sh/error/func/assign_void_ret.sk
f() {
	# do nothing
}

x := f()